src/main/java/com/example/consultorio_medico_api/utils/error/ErrorMapper.java
package com.example.consultorio_medico_api.utils.error;

public class ErrorMapper {
}
